# sensor_fusion_system-main

./: .clang-format  .gitignore  ANALYSIS_REPORT.md  CMakeLists.txt  Dockerfile  Interview_Prep_Guide.docx  README.md  package.xml
.github/workflows/: ci.yml  ros2-ci.yml
config/: params.yaml
docker/: entrypoint.sh
launch/: sensor_fusion_system.launch.py
rviz/: sensor_fusion.rviz
src/fusion/: fusion_node.cpp
src/safety/: safety_monitor_node.cpp
src/sensors/: imu_sensor_node.cpp  lidar_sensor_node.cpp
test/cpp/: test_fusion.cpp  test_imu_sensor.cpp
test/python/: test_sensor_fusion.py
